--- a/index.html
+++ b/index.html
@@ -24,49 +24,7 @@
 
 <body>
     <div class="contianer">
-        <div class="header" style="position: absolute;top: 0;left: 50%;margin-left: -600px;z-index: 999; background: transparent;">
-            <div class="logo_box">
-                <img src="./images/OA/logo.png">
-            </div>
-            <ul class="menu_box">
-                <li class="">
-                    <a href="">首页</a>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">产品</a>
-                    <ul class="hover_menu">
-                        <li><a href="#">OA</a></li>
-                        <li><a href="#">CRM</a></li>
-                        <li><a href="#">HRM</a></li>
-                        <li><a href="#">PM</a></li>
-                        <li><a href="#">企业培训</a></li>
-                    </ul>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">解决方案</a>
-                    <ul class="hover_menu">
-                        <li><a href="#">制造业</a></li>
-                        <li><a href="#">服装业</a></li>
-                        <li><a href="#">地产业</a></li>
-                        <li><a href="#">商贸业</a></li>
-                    </ul>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">服务与支持</a>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">关于云创办公</a>
-                    <i class="blue_border"></i>
-                </li>
-            </ul>
-            <div class="phone">
-                <a>免费试用</a>
-                <p><i></i>400-645-6677</p>
-            </div>
+        <div id="header" class="header">
         </div>
         <div class="banner_box">
             <div class="banner">
@@ -83,36 +41,52 @@
                 <div class="yuan">
                     <div class="neiyuan">
                         <div id="yuan1">
-                            <a href="#"><img src="images/index/OA@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/OA@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan2">
-                            <a href="#"><img src="images/index/CRM1@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/CRM1@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan3">
-                            <a href="#"><img src="images/index/CR2@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/CR2@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan4">
-                            <a href="#"><img src="images/index/4.png"></a>
-                            <div class="yuan_hover_box"></div>
+                           <img src="images/index/4.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan5">
-                            <a href="#"><img src="images/index/PM@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/PM@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan6">
-                            <a href="#"><img src="images/index/WMS@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/WMS@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan7">
-                            <a href="#"><img src="images/index/ERP@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/ERP@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="yuan8">
-                            <a href="#"><img src="images/index/yuan8.@2x.png"></a>
-                            <div class="yuan_hover_box"></div>
+                            <img src="images/index/yuan8.@2x.png">
+                            <div class="yuan_hover_box">
+                                <a href="OA.html"></a>
+                            </div>
                         </div>
                         <div id="zhongxin" style="z-index: 999">
                             <img src="./images/index/logo_btn.png" alt="">
@@ -502,9 +476,6 @@
 
                 </div>
             </div>
-
-
-
         </div>
 
         <div class="fun_list_box" style="margin-top: 120px">
@@ -588,7 +559,9 @@
                 </div>
             </div>
         </div>
+
         <div class="jian_bian_tiao"></div>
+
         <div class="industry_box">
             <h2 class="index_title" style="color:#fff">专属的企业解决方案，你需要的都在这里</h2>
             <div class="industry">
@@ -641,9 +614,7 @@
             </div>
         </div>
 
-        <div id="footer">
-
-        </div>
+        <div id="footer"></div>
     </div>
 </body>
 
