--- a/OA.html
+++ b/OA.html
@@ -36,7 +36,7 @@
             <h2 class="primary">让协同办公简单高效</h2>
             <p>云创智慧OA将日程管理、移动审批、考勤、汇报、采购等功能融合升级，提供便捷的智慧办公体验，使办公协同更高效，助理企业智慧化转型。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
-            <div class="swiper-container">
+            <div class="swiper-container" style="margin-bottom: 74px">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="images/OA/OA1.png" alt="" width="100%" height="100%"></div>
                     <div class="swiper-slide"><img src="images/OA/OA2.png" alt="" width="100%" height="100%"></div>
