--- a/study.html
+++ b/study.html
@@ -12,33 +12,41 @@
     <link rel="stylesheet" href="css/OA.css">
     <link rel="stylesheet" href="css/OA_header.css">
     <link rel="stylesheet" href="css/OA_footer.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
     <style>
-        .swiper-slide-active+div {
-            transform: scale(1.1) !important
+        .swiper-container {
+            width: 100%;
+            height: 100%;
         }
 
-        .swiper-container {
-            overflow-x: hidden;
-            height: 100% !important;
-        }
-        .selected-solution>div{
-            width: 1200px;
-        }
-        .selected-solution .swiper-container{
-            width: 100%;
-            margin-left: -17px;
-        }
-        .swiper-slide{
-            transform: scale(0.9) !important;
-        }
-        .swiper-slide .solution-card{
-            width: 349px;
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+            transition: 300ms;
+            transform: scale(0.8);
+            width: 337px;
             height: 581px;
+        }
+
+        .swiper-slide-active,
+        .swiper-slide-duplicate-active {
+            transform: scale(1);
         }
     </style>
 </head>
@@ -66,23 +74,22 @@
                     <div>
                         <div class="swiper-container">
                             <div class="solution-cardlist swiper-wrapper">
-                                <div class="col-sm-4 swiper-slide" style="padding:0 20px">
-                                    <div class="solution-card">
+                                <div class="swiper-slide" >
+                                    <!-- <div class="solution-card"> -->
                                         <img src="images/CRM/CRM1.png" width="100%">
-                                    </div>
+                                    <!-- </div> -->
                                 </div>
-                                <div class="col-sm-4 swiper-slide" style="padding:0 20px">
-                                    <div class="solution-card" style="padding:0 20px">
+                                <div class="swiper-slide" >
+                                    <!-- <div class="solution-card"> -->
                                         <img src="images/CRM/CRM2.png" width="100%">
-                                    </div>
+                                    <!-- </div> -->
                                 </div>
-                                <div class="col-sm-4 swiper-slide" style="padding:0 20px">
-                                    <div class="solution-card">
+                                <div class="swiper-slide">
+                                    <!-- <div class="solution-card"> -->
                                         <img src="images/CRM/CRM3.png" width="100%">
-                                    </div>
+                                    <!-- </div> -->
                                 </div>
                             </div>
-                            <!-- <div class="swiper-pagination solution-pagination"></div> -->
                         </div>
                     </div>
                 </div>
@@ -91,24 +98,17 @@
             <h2 class="primary">一站式企业学习平台</h2>
             <p>实现全网在线学习与培训管理，满足企业个性化培训需求，有效沉淀企业知识，帮助企业构建一站式学习平台</p>
             <script>
-                $(function () {
-                    new Swiper(".swiper-container", {
 
-                        //默认功能属性
-                        speed: 300,
-                        slidesPerView: 3,
-                        spaceBetween: 0,
-                        slidesPerGroup: 1,
-                        loop: true,
-                        autoplay: true,
-
-                        //分页索引
-                        pagination: {
-                            el: ".swiper-pagination",
-                            clickable: true
-                        }
-                    });
-                })
+                var swiper = new Swiper('.swiper-container', {
+                    slidesPerView: 3,
+                    spaceBetween: 30,
+                    centeredSlides: true,
+                    loop: true,
+                    pagination: {
+                        el: '.swiper-pagination',
+                        clickable: true,
+                    },
+                });
             </script>
         </div>
         <div class="OA_detail_container">
